Fix modal form display on mobile

--- a/app/frontend/stylesheets/components/modal/index.scss
+++ b/app/frontend/stylesheets/components/modal/index.scss
@@ -43,6 +43,7 @@
   text-align: left;
 }
 .modal-content__body {
+  overflow-x: scroll;
   text-align: left;
 }
 .modal-content__button-container {
