--- a/app/frontend/stylesheets/components/modal_form/block.scss
+++ b/app/frontend/stylesheets/components/modal_form/block.scss
@@ -8,6 +8,9 @@
     display: flex;
     align-items: center;
     width: 200px;
+    // At lower widths the `width` above is not respected, leading to
+    // misalignment. Force a minimum width
+    min-width: 100px;
     margin-right: 20px;
     color: $dark-gray;
     font-weight: 700;
